# iot-framework

./: .gitignore  README.md
src/comms/lwcommunicate/: CMakeLists.txt  lwconn.h  lwconn_base.cpp  lwconn_device.cpp  lwconn_device.h  lwconn_manager.cpp  lwconn_pool.cpp  lwconn_pool.h  lwconn_serial.cpp  lwconn_serial.h  lwconn_tcp_client.cpp  lwconn_tcp_server.cpp  lwconn_tcp_server.h  lwconn_test.cpp  lwconn_udp.cpp  lwconn_udp.h  lwconn_utils.cpp  lwconn_utils.h
src/comms/lwdistcomm/: CMakeLists.txt
src/comms/lwdistcomm/include/: address.h  server.h
src/comms/lwdistcomm/test/: test_dds.c  test_dds_simple.c  test_sigpipe.c
src/comms/lwipc_ssn/: CMakeLists.txt  ipc_cliauto.c  ipc_cliauto.h  ipc_client.c  ipc_client.h  ipc_list.h  ipc_parser.c  ipc_platform.h  ipc_server.c  test_ipc_client.c  test_ipc_server.c
src/driver-sdk/lwdriver/: CMakeLists.txt  lwdriver.cpp
src/driver-sdk/lwdrvcmn/: CMakeLists.txt  config_loader.cpp  config_loader.h  device.cpp  device.h  dll_main.cpp  driver.cpp  driver.h  drvdto.hpp  drvframework.cpp  drvframework.h  lwdrivercommon.cpp  lwdrvcmn.h  maintask.cpp  maintask.h  resource_manager.cpp  resource_manager.h  user_timer.cpp  user_timer.h
src/service/: CMakeLists.txt
src/service/alarm-server/: CMakeLists.txt  main.cpp
src/service/alarm-server/api/: alarm_node_subscriber.cpp  alarm_node_subscriber.h  alarm_server_controller.cpp  alarm_server_controller.h
src/service/alarm-server/dto/: alarm_node_dto.hpp
src/service/alarm-server/service/: alarm_log.cpp  alarm_log.h  alarm_rule_processor.cpp  alarm_rule_processor.h  alarm_server.cpp  alarm_server.h  alarm_state_manager.cpp  alarm_state_manager.h
src/service/app-manager/: README.md  app_manager.cpp  app_manager.h
src/service/base_task/: base_task.h  periodic_task.h  task.h  task_manager.h  test.cpp  thread_task.h
src/service/dds-publisher/: CMakeLists.txt  publisher.cpp
src/service/dds-subscriber/: CMakeLists.txt  subscriber.cpp
src/service/edge-core/: CMakeLists.txt  README.md  main.cpp  registration_service.cpp
src/service/edge-core/base/: base.h  base_err.h  version.cpp  version.h
src/service/edge-core/cfgm/: cfgm_service.cpp  cfgm_service.h  config_manager.cpp  config_manager.h  config_types.h
src/service/edge-core/cloud/: cloud_handler.cpp  cloud_handler.h  example_usage.cpp  test.cpp
src/service/edge-core/logm/: log_manager.cpp  log_manager.h  log_types.h
src/service/edge-core/regm/: registry_manager.cpp  registry_manager.h
src/service/edge-core/resm/: resource_monitor.cpp  resource_monitor.h  resource_types.h
src/service/edge-core/security/: key_storage_backend.h  security_context.cpp  security_context.h  security_key_manager.cpp  security_key_manager.h
src/service/health-monitor/: health_monnitor.h
src/service/history-service/: CMakeLists.txt  README.md  dds_handler.cpp  dds_handler.h  history_service.cpp  history_service.h  history_storage.h  vsoa_handler.cpp  vsoa_handler.h
src/service/history-service/storage/: file_storage.cpp
src/service/linkserver/: CMakeLists.txt
src/service/linkserver/config/: linkage.db  lw_monitor.sql  test_data.sql
src/service/linkserver/linkact_writetag_multiple/: CMakeLists.txt  writetag_multiple.cpp
src/service/linkserver/linkact_writetag_single/: CMakeLists.txt  writetag_single.cpp
src/service/linkserver/linkevt_alarm/: CMakeLists.txt  alarm_node_dto.hpp  alarm_subscriber.cpp  alarm_subscriber.h
src/service/linkserver/linkserver/: CMakeLists.txt  link_define.h  linkact_manager.cpp  linkact_manager.h  linkevt_manager.cpp  linkevt_manager.h  log_linkage.cpp  log_linkage.h  main.cpp  rule_engine.cpp  rule_engine.h
src/service/linkserver/util/: plugin_interface.h
src/service/modbus_server/: CMakeLists.txt
src/service/modbus_server/config/: modbus_server.json
src/service/modbus_server/src/: main.cpp  modbus_protocol.cpp  modbus_protocol.h  modbus_server.cpp  modbus_server.h  modbus_slave.cpp  modbus_slave.h
src/service/nodeserver/: AppComponent.hpp  CMakeLists.txt  ErrorHandler.cpp  SwaggerComponent.hpp  data_center.cpp  data_center.h  driver_collector.cpp  driver_collector.h  hmi_server.cpp  hmi_server.hpp  main.cpp  node_server.cpp  node_server.h  nodedto.hpp  rtdb.cpp  rtdb.hpp  static_dto.hpp  test_dds_client.cpp  test_nodeserver.py  test_nodeserver_http.py  websocket_server.cpp  websocket_server.hpp
src/service/nodeserver/controller/: HmiPointController.hpp
src/service/nodeserver/dds/: dds_manager.cpp  dds_manager.h
src/service/nodeserver/dto/: HmiPointDto.hpp  StatusDto.hpp
src/service/nodeserver/service/: HmiPointService.cpp  HmiPointService.hpp
src/service/servermgr/: CMakeLists.txt
src/service/servermgr/src/: App.cpp  AppComponent.hpp  config_parser.cpp  config_parser.h  servermgr.cpp  servermgr.h
src/service/video-server/: CMakeLists.txt
src/service/video-server/config/: config.json
src/service/video-server/include/: ConfigService.h  DatabaseManager.h  DeviceManager.h  LogService.h  PluginManager.h  StreamManager.h  VideoServer.h  ZLMediaKitAdapter.h
src/service/video-server/plugins/: CMakeLists.txt  HikvisionPlugin.cpp  HikvisionPlugin.h  RTSPPlugin.cpp  RTSPPlugin.h
src/service/video-server/src/: ConfigService.cpp  DatabaseManager.cpp  DeviceManager.cpp  LogService.cpp  PluginManager.cpp  StreamManager.cpp  VideoServer.cpp  ZLMediaKitAdapter.cpp  main.cpp
src/service/web-server/: App.cpp  AppComponent.hpp  CMakeLists.txt  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  README.md  SwaggerComponent.hpp  test.sh
src/service/web-server/common/: Logger.hpp
src/service/web-server/controller/: AlarmController.hpp  DeviceController.hpp  DictController.hpp  DriverController.hpp  LinkageController.hpp  PointController.hpp  StaticController.hpp  SystemConfigController.hpp  UserController.hpp  VideoController.hpp
src/service/web-server/db/: AlarmDb.hpp  DeviceDb.hpp  DictDb.hpp  DriverDb.hpp  (+4 more)
src/tools/modbus_client/: CMakeLists.txt
src/yan-registry/: CMakeLists.txt  README.md
src/yan-registry/src/: App.cpp  DatabaseComponent.hpp  SwaggerComponent.hpp
(+346 files in other folders)
